very small fix on fb-like vertical align

--- a/assets/stylesheets/share.css.scss
+++ b/assets/stylesheets/share.css.scss
@@ -51,7 +51,7 @@
       margin-top: -15px;
 
       .fb-like {
-      vertical-align: 13px;
+      vertical-align: 11px;
       }
     }
   }
